# libwtk-sdl2

./: .gitignore  Makefile  Makefile.am  README.md  bin.cpp  bin.hpp  box.cpp  box.hpp  button.cpp  button.hpp  color_widget.cpp  color_widget.hpp  configure.ac  container.cpp  container.hpp  draw_context.cpp  draw_context.hpp  font_atlas.cpp  font_atlas.hpp  font_word_cache.cpp  font_word_cache.hpp  geometry.cpp  geometry.hpp  gui.cpp  key_event.hpp  label.cpp  label.hpp  layout_info.cpp  layout_info.hpp  libwtk-sdl2.pc.in  linear_container.cpp  linear_container.hpp  list_view.cpp  list_view.hpp  mouse_event.cpp  mouse_event.hpp  notebook.cpp  notebook.hpp  padding.cpp  padding.hpp  (+19 more)
.reuse/: dep5
data/: Makefile.am
doc/: Doxyfile.in
include/: Makefile.am  bin.hpp  box.hpp  button.hpp  byte_array_slice.hpp  color_widget.hpp  container.hpp  context_info.hpp  copy_command.hpp  draw_context.hpp  embedded_widget.hpp  empty.hpp  font.hpp  font_manager.hpp  font_word_cache.hpp  geometry.hpp  grid.hpp  key_event.hpp  label.hpp  layout_info.hpp  list_view.hpp  mouse_event.hpp  mouse_tracker.hpp  navigation_type.hpp  notebook.hpp  padding.hpp  radio_button.hpp  region.hpp  sdl_util.hpp  selectable.hpp  selection_context.hpp  slider.hpp  swipe.hpp  swipe_area.hpp  swipe_detector.hpp  swipe_event.hpp  table.hpp  text_button.hpp  texture_button.hpp  texture_view.hpp  (+4 more)
src/: .gitignore  Makefile.am  bin.cpp  bin.hpp  box.cpp  button.cpp  byte_array_slice.cpp  color_widget.cpp  container.cpp  container.hpp  context_info.cpp  draw_context.cpp  empty.cpp  font_manager.cpp  font_word_cache.cpp  geometry.cpp  geometry.hpp  grid.cpp  gui.cpp  label.cpp  list_view.cpp  mouse_event.cpp  mouse_tracker.cpp  navigation_type.cpp  notebook.cpp  padding.cpp  radio_button.cpp  region.cpp  sdl_util.cpp  selectable.cpp  selection_context.cpp  slider.cpp  swipe.cpp  swipe_area.cpp  swipe_area.hpp  swipe_detector.cpp  table.cpp  table.hpp  text_button.cpp  texture_button.cpp  (+5 more)
