pkginclude_HEADERS =    \
	bin.hpp               \
	box.hpp               \
	button.hpp            \
	color_widget.hpp      \
	container.hpp         \
	context_info.hpp      \
	copy_command.hpp      \
	draw_context.hpp      \
	embedded_widget.hpp   \
	empty.hpp             \
	font.hpp              \
	font_word_cache.hpp   \
	geometry.hpp          \
	key_event.hpp         \
	label.hpp             \
	list_view.hpp         \
	mouse_event.hpp       \
	mouse_tracker.hpp     \
	navigation_type.hpp   \
	notebook.hpp          \
	padding.hpp           \
	sdl_util.hpp          \
	selectable.hpp        \
	selection_context.hpp \
	swipe.hpp             \
	swipe_area.hpp        \
	table.hpp             \
	texture_view.hpp      \
	utf8.hpp              \
	util.hpp              \
	widget.hpp            \
	widget_context.hpp

